<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F6FF"
    tools:context=".Main.HomeFragment">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="138dp"
        android:text="@string/header_text"
        android:textColor="@color/black_1"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/subtitle_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="136dp"
        android:padding="8dp"
        android:text="@string/subtitle_text"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_text" />

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:autofillHints="username"
        android:background="@drawable/searchbar_background"
        android:drawableStart="@drawable/magnifyingglass"
        android:drawablePadding="8dp"
        android:focusableInTouchMode="true"
        android:hint="Search"
        android:importantForAutofill="yes"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="#888888"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle_text" />

    <!-- Lessons Section -->
    <TextView
        android:id="@+id/lessons_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/lessons_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar" />

    <!-- Lessons RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lessons_title" />
</androidx.constraintlayout.widget.ConstraintLayout>
